# audio-capture

./: .gitignore  .prettierignore  README.md  audio-capture.toml  eslint.config.js  index.html  package-lock.json  package.json  tauri-dev.bat  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: code_quality.md  running_the_project.md
scripts/: clear-dev-build.cjs  mark-dev-build.cjs  start-dev.js  update-docs.cjs
src/: App.module.scss  App.tsx  global-styles.scss  main.tsx  theme.scss  types.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  config.rs  lib.rs  main.rs
src/components/AudioPlayer/: AudioPlayer.module.scss  AudioPlayer.tsx
src/components/Header/: Header.module.scss  Header.tsx
src/components/RecordingControls/: RecordingControls.module.scss  RecordingControls.tsx
src/components/RecordingList/: RecordingList.module.scss  RecordingList.tsx
src/components/SaveModal/: SaveModal.module.scss  SaveModal.tsx
src/components/SearchBar/: SearchBar.module.scss  SearchBar.tsx
src/hooks/: useRecorder.ts  useRecordings.ts
